# dcos-mesos-modules

./: .gitignore  CMakeLists.txt  HOWTO.md  Makefile.am  README.md  Vagrantfile  agent_modules.json.in  bootstrap  configure.ac  master_modules.json.in  modules.json.in
.github/: pull_request_template.md
cmake/: Dependencies.cmake
common/: shell.hpp
docker/: Dockerfile_base  build_overlay.sh
dockercfg/: CMakeLists.txt  README.md  modules.json.cmake-in  modules.json.in  remover.cpp  remover.hpp
include/common/: constants.hpp
include/overlay/: overlay.hpp  overlay.proto
include/overlay/internal/: messages.hpp  messages.proto  utils.hpp
journald/: CMakeLists.txt  README.md  journald.cpp  journald.hpp  lib_journald.cpp  lib_journald.hpp  modules.json.cmake-in  modules.json.in
logsink/: CMakeLists.txt  logsink.cpp  logsink.hpp  modules.json.cmake-in  modules.json.in
metrics/: CMakeLists.txt  isolator.cpp  isolator.hpp  messages.proto  modules.json.in
overlay/: CMakeLists.txt  README.md  agent.cpp  agent.hpp  agent_metrics.cpp  agent_metrics.hpp  agent_modules.json.in  constants.hpp  master.cpp  master_metrics.cpp  master_metrics.hpp  master_modules.json.in  messages.hpp  messages.proto  network.hpp  overlay.hpp  overlay.proto  supervisor.hpp  supervisor_metrics.cpp  supervisor_metrics.hpp  utils.hpp
overlay/jenkins/: Makefile  build_overlay.sh
overlay/simulations/: README.md
overlay/simulations/example/: overlay-agent2.json
scripts/: config.py
scripts/example/: overlay-agent1.json  overlay-agent2.json
src/: README.md  agent_helper.cpp  dockercfg_remover.cpp  dockercfg_remover.hpp  master_helper.cpp  modules.json.in
src/agent/: constants.hpp  manager.cpp
src/master/: manager.cpp
src/tests/: dockercfg_remover_tests.cpp  main.cpp  overlay_tests.cpp
support/: mesos-style.py
support/hooks/: pre-commit
tests/: CMakeLists.txt  common_tests.cpp  dockercfg_tests.cpp  journald_tests.cpp  logsink_tests.cpp  main.cpp  metrics_tests.cpp  overlay_tests.cpp
